<resources>
    <string name="app_name">سیمرغ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="error_text_view">خطا در برقراری ارتباط</string>

    <!--Main drawer-->
    <string name="menu_home">خانه</string>
    <string name="menu_news">اخبار</string>
    <string name="menu_events">تقویم رویدادها</string>
    <string name="menu_books">کتابفروشی</string>
    <string name="menu_magazine">مجلات</string>
    <string name="menu_warfare">اطلس سامانه‌ها</string>
    <string name="menu_infographic">داده‌نمایی</string>
    <string name="menu_tes_calendar">ثبت رویداد</string>
    <string name="menu_idea">ایده‌پردازی</string>
    <string name="menu_ebook">کتاب الکترونیک</string>
    <string name="menu_search">جست‌و‌جو</string>
    <string name="menu_thesis_event">ثبت رویداد دفاع</string>
    <string name="menu_exit">خروج</string>

    <!--Login Activity-->
    <string name="login_btn">ورود</string>
    <string name="login_user_hint">نام کاربری</string>
    <string name="login_pass_hint">رمز عبور</string>
    <string name="login_new_user"><u>اکانت جدید بسازید</u></string>
    <string name="login_error">خطا در ورود.</string>

    <!--Signup Activity-->
    <string name="sign_btn">ثبت نام</string>
    <string name="sign_user_hint">نام کاربری</string>
    <string name="sign_email_hint">ایمیل</string>
    <string name="sign_pass_hint">رمز عبور</string>
    <string name="sign_pass2_hint">تکرار رمز عبور</string>
    <string name="sign_error_pass_short">کلمه‌ی عبور حداقل ۶ کاراکتر باشد.</string>
    <string name="sign_error_pass_not_match">کلمه‌‌های عبور با هم تفاوت دارند!</string>
    <string name="sign_error_user_short">نام کاربری حداقل ۶ حرف باشد</string>
    <string name="sign_error_user_exist">نام کاربری قبلا انتخاب شده است.</string>
    <string name="sign_success">ثبت نام با موفقیت انجام شد.</string>

    <!--Calendar view-->
    <string name="day_1">شنبه</string>
    <string name="day_2">یکشنبه</string>
    <string name="day_3">دوشنبه</string>
    <string name="day_4">سه‌‍‌شنبه</string>
    <string name="day_5">چهارشنبه</string>
    <string name="day_6">پنج‌شنبه</string>
    <string name="day_7">جمعه</string>
    <string name="fday_1">ش</string>
    <string name="fday_2">ی</string>
    <string name="fday_3">د</string>
    <string name="fday_4">س</string>
    <string name="fday_5">چ</string>
    <string name="fday_6">پ</string>
    <string name="fday_7">ج</string>
    <string name="month_1">فروردین</string>
    <string name="month_2">اردیبهشت</string>
    <string name="month_3">خرداد</string>
    <string name="month_4">تیر</string>
    <string name="month_5">مرداد</string>
    <string name="month_6">شهریور</string>
    <string name="month_7">مهر</string>
    <string name="month_8">آبان</string>
    <string name="month_9">آذر</string>
    <string name="month_10">دی</string>
    <string name="month_11">بهمن</string>
    <string name="month_12">اسفند</string>


    <!--BookShopFragment-->
    <string name="price_str">%d تومان</string>
    <string name="price_free">رایگان</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="cart_view_btn">مشاهده‌ی سبد خرید</string>

    <!--BookCartActivity-->
    <string name="book_total_price_val">%d تومان</string>
    <string name="book_total_price_str">جمع کل خرید</string>
    <string name="book_checkout">خرید خود را نهایی کنید</string>
    <string name="book_item_price">قیمت: %d تومان</string>

    <!--BookDetailActivity-->
    <string name="book_author_str">نویسنده: %s</string>
    <string name="book_translator_str">مترجم: %s</string>
    <string name="book_year_str">سال چاپ: %s</string>
    <string name="book_detail_item_price">قیمت: %d تومان</string>

    <!--BookBillingActivity-->
    <string name="bill_name">نام</string>
    <string name="bill_phone">شماره تلفن</string>
    <string name="bill_address">آدرس</string>
    <string name="bill_checkout">خرید</string>
    <string name="bill_required">این فیلد الزامیست</string>

    <!--MainFragment-->
    <string name="title">دفاع</string>
    <string name="card_news">اخبار</string>
    <string name="card_book">کتابفروشی</string>
    <string name="card_atlas">اطلس سامانه‌ها</string>
    <string name="card_magazine">مجلات</string>
    <string name="card_calendar">تقویم رویدادها</string>
    <string name="card_info">داده‌نمایی</string>
    <string name="card_tes">ثبت رویداد</string>
    <string name="card_idea">ایده‌پردازی</string>
    <string name="card_ebook">کتاب الکترونیک</string>
    <string name="card_thesis_event">ثبت رویداد دفاع</string>
    <string name="card_havafaza_mag">ماهنامه هوافضا</string>
    <string name="exit_toast">برای خروج دوباره دکمه بازگشت را بزنید</string>

    <!--WarfareFragment-->
    <string name="warfare_back_btn">بازگشت</string>
    <string name="warfare_parent_cat_tv">دسته‌ها</string>
    <string name="title_activity_infographic_detail">InfographicDetailActivity</string>

    <!-- CreateEventFragment -->
    <string name="title_hint">عنوان رویداد</string>
    <string name="location_hint">محل برگزاری</string>
    <string name="body_hint">توضیحات</string>
    <string name="file_hint">آپلود عکس (اختیاری)</string>
    <string name="start_separator">زمان شروع</string>
    <string name="end_separator">زمان پایان</string>
    <string name="time_tv">ساعت شروع رویداد: %02d:%02d</string>
    <string name="date_tv">تاریخ شروع رویداد: %2d %s %2d</string>
    <string name="e_time_tv">ساعت پایان رویداد: %02d:%02d</string>
    <string name="e_date_tv">تاریخ پایان رویداد: %2d %s %2d</string>
    <string name="info_hint">ایمیل یا شماره تماس (اختیاری)</string>
    <string name="submit_btn">ارسال</string>
    <string name="success_toast">درخواست شما با موفقیت ثبت شد.</string>

    <!-- CreateThesisEventFragment -->
    <string name="te_title_hint">موضوع ارایه</string>
    <string name="te_location_hint">محل دفاع</string>
    <string name="te_student_name_hint">نام دانشجو</string>
    <string name="te_teacher_name_hint">نام استاد راهنما</string>
    <string name="te_university_hint">دانشگاه</string>
    <string name="te_file_hint">آپلود عکس (اختیاری)</string>
    <string name="te_start_separator">زمان شروع</string>
    <string name="te_end_separator">زمان پایان</string>
    <string name="te_time_tv">ساعت شروع رویداد: %02d:%02d</string>
    <string name="te_date_tv">تاریخ شروع رویداد: %2d %s %2d</string>
    <!--<string name="te_e_time_tv">ساعت پایان رویداد: %02d:%02d</string>-->
    <!--<string name="te_e_date_tv">تاریخ پایان رویداد: %2d %s %2d</string>-->
    <string name="te_info_hint">ایمیل یا شماره تماس (اختیاری)</string>
    <string name="te_submit_btn">ارسال</string>
    <string name="te_success_toast">درخواست شما با موفقیت ثبت شد.</string>

    <!-- IdeaFragment -->
    <string name="idea_new">ثبت ایده‌ی جدید</string>
    <string name="idea_mine">ایده‌های من</string>

    <!-- New Idea1 Activity -->
    <string name="education_diploma">دیپلم</string>
    <string name="education_bachelour">کارشناسی</string>
    <string name="education_master">کارشناسی ارشد</string>
    <string name="education_doc">دکترا</string>
    <string name="education_post_doc">پسادکترا</string>
    <string name="idea_activity_title">ایده‌ی جدید</string>
    <string name="idea_activity_name_hint">نام و نام خانوادگی</string>
    <string name="idea_activity_location_hint">محل خدمت</string>
    <string name="idea_activity_education_hint">مدرک تحصیلی</string>
    <string name="idea_activity_field_hint">رشته‌ی تحصیلی</string>
    <string name="idea_activity_phone_hint">شماره تماس</string>
    <string name="idea_activity_email_hint">ایمیل</string>
    <string name="idea_activity_address_hint">آدرس سکونت</string>
    <string name="idea_activity_next">ادامه</string>
    <!-- New Idea2 Activity -->
    <string name="idea_activity_title_hint">عنوان ایده</string>
    <string name="idea_activity_body_hint">شرح ایده</string>
    <string name="idea_activity_category_hint">محور ایده</string>
    <string name="idea_activity_submit">ارسال</string>
    <string name="idea_activity_ok_toast">با موفقیت ثبت شد</string>
    <string name="idea_cat_1">ایده‌های سامانه‌های هوافضایی</string>
    <string name="idea_cat_1_1">سامانه‌های موشکی بالستیک</string>
    <string name="idea_cat_1_2">سامانه‌های موشکی ماهواره‌بر</string>
    <string name="idea_cat_1_3">سامانه‌های موشکی کروز</string>
    <string name="idea_cat_1_4">سامانه‌های موشکی پدافند</string>
    <string name="idea_cat_2">ایده‌های عملیاتی موشکی</string>
    <string name="idea_cat_2_1">پدافندی موشکی</string>
    <string name="idea_cat_2_2">آفندی موشکی</string>
    <string name="idea_cat_2_3">ارتقاء اثربخش سامانه‌های موشکی</string>
    <string name="idea_cat_3">ایده‌های توسعه فناوری‌های موشکی</string>
    <string name="idea_cat_3_1">توسعه فناوری‌های نوین در ارتقاء عملکرد</string>
    <string name="idea_cat_3_2">توسعه فناوری‌های کلیدی</string>
    <string name="idea_cat_4">سایر</string>
    <string name="idea_cat_4_1">سایر</string>

    <!-- MyIdeas Activity -->
    <string name="my_idea_activity_title">ایده‌های من</string>
    <string name="my_idea_state">وضعیت:</string>
    <string name="my_idea_state_text">ملاحظات:</string>
    <string name="my_idea_code">کد پیگیری:</string>
    <string name="my_idea_info">راهنمای ثبت ایده</string>
    <string name="my_idea_info_title">راهنمای ثبت ایده</string>
    <string name="my_idea_info_text">راهنما</string>
    <string name="my_idea_info_dialog_text">در صورتی که ایده‌ی شما پس از بررسی پذیرفته شد، با شما از طرف سازمان تماس برقرار میشود.</string>
    <string name="my_idea_info_dialog_yes">باشه</string>

    <!-- EBook fragment-->
    <string name="ebook_downloads">خرید‌ها و دانلود‌ها</string>
    <string name="ebook_toast">به دانلود‌ها اضافه شد</string>
    <string name="add_to_download">افزودن به دانلود‌ها</string>
    <string name="purchase">خرید</string>
    <string name="detail">جزییات</string>

    <!-- EBook download activity-->
    <string name="ebook_downloads_title">خرید‌ها و دانلود‌ها</string>
    <string name="ebook_downloads_download">دانلود</string>
    <string name="ebook_downloads_downloading">درحال دانلود</string>
    <string name="ebook_downloads_open">مشاهده</string>

    <!-- EBook Detail Activity-->
    <string name="ebook_purchase">خرید</string>
    <string name="ebook_add_to_download">افزودن به دانلود‌ها</string>

    <!-- Search -->
    <string name="search">جست‌و‌جو</string>
    <string name="search_no_result">نتیجه‌ای یافت نشد</string>
    <string name="search_atlas">نتایج در جنگ‌افزارها</string>
    <string name="search_book">نتایج در کتاب‌ها</string>
    <string name="search_mag">نتایج در مجلات</string>
    <string name="search_infographic">نتایج در داده‌نمایی</string>
    <string name="search_ebook">نتایج در کتاب الکترونیک</string>

    <!--MagazineListActivity-->
    <string name="magazine_title">مجلات</string>
    <string name="magazine_filter">فیلتر</string>

</resources>
