<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.SignUpActivity"
    android:background="@color/activityBackground">

    <EditText
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="140dp"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:hint="@string/sign_user_hint"
        android:gravity="center"
        android:background="@drawable/white_btn"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:hint="@string/sign_email_hint"
        android:gravity="center"
        android:background="@drawable/white_btn"
        android:layout_below="@id/userText"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/passText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:hint="@string/sign_pass_hint"
        android:gravity="center"
        android:background="@drawable/white_btn"
        android:layout_below="@id/emailText"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pass2Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:hint="@string/sign_pass2_hint"
        android:gravity="center"
        android:background="@drawable/white_btn"
        android:layout_below="@id/passText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:layout_below="@id/pass2Text"
        android:layout_marginTop="40dp"
        android:text="@string/sign_btn"
        android:textSize="20dp"
        tools:ignore="SpUsage" />

</RelativeLayout>