<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.BookBillingActivity"
    android:background="#c7c7c7">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buy_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="140dp"
                android:layout_marginRight="90dp"
                android:layout_marginLeft="90dp"
                android:hint="@string/bill_name"
                android:gravity="center"
                android:background="@drawable/white_btn"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:layout_marginRight="90dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:hint="@string/bill_phone"
                android:gravity="center"
                android:background="@drawable/white_btn"
                android:layout_below="@id/name"
                android:inputType="text"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="300dp"
                android:ems="10"
                android:layout_marginRight="90dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:hint="@string/bill_address"
                android:gravity="center"
                android:background="@drawable/white_btn"
                android:layout_below="@id/phone"/>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/buy_parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/activityBackground">

        <TextView
            android:id="@+id/checkout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bill_checkout"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>